[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://Images/CardArt/Placeholder.png" type="Texture" id=2]
[ext_resource path="res://Images/CardArt/CardFrame.png" type="Texture" id=3]
[ext_resource path="res://Fonts/AlMadiri.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/Mada.tres" type="DynamicFont" id=5]
[ext_resource path="res://Images/CardArt/hourglass.png" type="Texture" id=132]
[ext_resource path="res://Images/CardArt/ReactionArrow.png" type="Texture" id=133]
[ext_resource path="res://Images/CardArt/Endless.png" type="Texture" id=134]

[sub_resource type="Animation" id=1]
resource_name = "Grow"
tracks/0/type = "value"
tracks/0/path = NodePath("Resizer:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 0.1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Resizer:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 0.1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -480 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Resizer:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 2 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 371.979, 518.545 )

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 5.0
anims/Grow = SubResource( 1 )

[node name="Resizer" type="Node2D" parent="."]

[node name="CardArt" type="Sprite" parent="Resizer"]
position = Vector2( 369.166, 319.764 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CardFrame" type="Sprite" parent="Resizer"]
position = Vector2( 373.649, 518.946 )
texture = ExtResource( 3 )

[node name="Cost" type="RichTextLabel" parent="Resizer/CardFrame"]
anchor_left = 0.0019934
anchor_top = 0.001431
anchor_right = 0.0019934
anchor_bottom = 0.001431
margin_left = -362.471
margin_top = -528.471
margin_right = -222.471
margin_bottom = -349.471
rect_scale = Vector2( 0.75, 0.75 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="Resizer/CardFrame"]
anchor_top = 0.00144121
anchor_right = 1.0
anchor_bottom = 0.0934412
margin_left = -368.0
margin_top = -515.0
margin_right = 329.0
margin_bottom = -420.576
rect_rotation = -360.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Title[/center]"
text = "Title"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Text" type="RichTextLabel" parent="Resizer/CardFrame"]
anchor_left = 0.00199138
anchor_right = 1.00199
anchor_bottom = 0.092
margin_left = -330.172
margin_top = 40.2161
margin_right = 569.829
margin_bottom = 775.64
rect_rotation = -360.0
rect_scale = Vector2( 0.4, 0.4 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]When you play a
 wind card, draw a card for each wind card in play[/center]"
text = "When you play a
 wind card, draw a card for each wind card in play"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Timer" type="RichTextLabel" parent="Resizer/CardFrame"]
anchor_left = 0.00199138
anchor_right = 1.00199
anchor_bottom = 0.092
margin_left = 169.665
margin_top = 392.973
margin_right = -403.335
margin_bottom = 470.397
rect_rotation = -360.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]4[/center]"
text = "4"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="arrow" type="Sprite" parent="Resizer/CardFrame"]
position = Vector2( 140.569, 436.218 )
scale = Vector2( 0.27, 0.27 )
texture = ExtResource( 133 )

[node name="Endless" type="Sprite" parent="Resizer/CardFrame"]
position = Vector2( 242.812, 456.871 )
scale = Vector2( 0.35, 0.3 )
texture = ExtResource( 134 )

[node name="hourglass" type="Sprite" parent="Resizer/CardFrame"]
position = Vector2( 146.711, 439.293 )
scale = Vector2( 0.2, 0.25 )
texture = ExtResource( 132 )

[node name="Area2D" type="Area2D" parent="Resizer/CardFrame"]
position = Vector2( -373.649, -518.946 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resizer/CardFrame/Area2D"]
position = Vector2( 371.857, 515.279 )
shape = SubResource( 2 )
[connection signal="input_event" from="Resizer/CardFrame/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Resizer/CardFrame/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Resizer/CardFrame/Area2D" to="." method="_on_Area2D_mouse_exited"]
